# retinaface_arcface_RasberryPi_android

./: CMakeLists.txt  README.md
android-ncnn/: build.gradle
android-ncnn/app/: CMakeLists.txt  build.gradle
android-ncnn/app/src/androidTest/java/com/example/testopencv/: ExampleInstrumentedTest.java
android-ncnn/app/src/main/: AndroidManifest.xml
android-ncnn/app/src/main/cpp/: arcface.cpp  arcface.h  live.cpp  live.h  livefacereco.cpp  livefacereco.hpp  native-lib.cpp  retinaface.cpp  retinaface.h
android-ncnn/app/src/main/java/com/example/testopencv/: Box.java  FaceRecog.java  MainActivity.java
android-ncnn/app/src/main/res/values/: strings.xml
android-ncnn/app/src/test/java/com/example/testopencv/: ExampleUnitTest.java
android-ncnn/gradle/wrapper/: gradle-wrapper.properties
src/: live.cpp  livefacereco.cpp  livefacereco.hpp  livefacereco_ori.cpp  retinaface.cpp  retinaface.h
